--- a/_config.yml
+++ b/_config.yml
@@ -1,20 +1,21 @@
 # Site settings
-title: A blog about lorem ipsum dolor sit amet
-description: A blog about lorem ipsum dolor sit amet
-# baseurl: "/particle" # the subpath of your site, e.g. /blog
-# url: "localhost:3000" # the base hostname & protocol for your site e.g. http://willianjusten.com.br
+title: Hunter Dubel
+description: Software Engineer
+#baseurl: "/hunterdubel" # the subpath of your site, e.g. /blog
+url: "localhost:4000" # the base hostname & protocol for your site e.g. http://willianjusten.com.br
 
 # User settings
-username: Anon Developer
+username: Hunter Dubel
 user_description: Bicycle rights irony actually neutra typewriter lyft. Man bun taxidermy put a bird on it, umami yr ramps pop-up ugh bushwick chia lo-fi. Occupy bitters pour-over snackwave you probably haven't heard of them small batch. Cornhole mustache man bun letterpress echo park VHS.
-user_title: Software Developer
-email: anon@anon.com
-twitter_username: lorem_ipsum
-github_username:  lorem_ipsum
-gplus_username:  lorem_ipsum
+user_title: Software Engineer
+email: hunterdubel@ieee.org
+twitter_username: hdubel
+github_username:  hdubel94
+linkedin_username: hunter-dubel
+gplus_username:  HunterDubel
 
 # Google-analytics
 google-analytics:
-  id: ""
+  id: "UA-71163561-1"
 
 exclude: ['package.json', 'src' , 'node_modules']
