--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Hunter Dubel
 description: Software Engineer
 #baseurl: "/hunterdubel" # the subpath of your site, e.g. /blog
-url: "localhost:4000" # the base hostname & protocol for your site e.g. http://willianjusten.com.br
+url: "hunterdubel.xyz" # the base hostname & protocol for your site e.g. http://willianjusten.com.br
 
 # User settings
 username: Hunter Dubel
