--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,12 @@
 # Site settings
 title: Hunter Dubel
 description: Software Engineer
-#baseurl: "/hunterdubel" # the subpath of your site, e.g. /blog
-url: "hunterdubel.xyz" # the base hostname & protocol for your site e.g. http://willianjusten.com.br
+#baseurl: "/" # the subpath of your site, e.g. /blog
+#url: "http://hunterdubel.xyz" # the base hostname & protocol for your site e.g. http://willianjusten.com.br
 
 # User settings
 username: Hunter Dubel
-user_description: Bicycle rights irony actually neutra typewriter lyft. Man bun taxidermy put a bird on it, umami yr ramps pop-up ugh bushwick chia lo-fi. Occupy bitters pour-over snackwave you probably haven't heard of them small batch. Cornhole mustache man bun letterpress echo park VHS.
+user_description: Studying for Masters of Science in Software Engineering at Monmouth University. Graduated from The College of New Jersey in '17 with a Bachelors of Engineering in Computer Engineering.
 user_title: Software Engineer
 email: hunterdubel@ieee.org
 twitter_username: hdubel
