--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,13 @@
 # Site settings
 title: Hunter Dubel
-description: Software & Computer Engineer
+description: DevOps Engineer | Software Engineer | Computer Engineer
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://hunterdubel.xyz" # the base hostname & protocol for your site e.g. http://willianjusten.com.br
 
 # User settings
 username: Hunter Dubel
-user_description: Studying for a Masters of Science in Software Engineering at Monmouth University. Graduated from The College of New Jersey in '17 with a Bachelors of Engineering in Computer Engineering.
-user_title: Software & Computer Engineer
+user_description: I'm always looking for new technologies to learn or ways to master my current skill set. Collector of technology with an interest in 3D printers, micro controllers, drones, and game development.
+user_title: DevOps Engineer | Software Engineer | Computer Engineer
 email: hunterdubel@ieee.org
 twitter_username: hdubel
 github_username:  hdubel94
